src/objects/RT1__OpportunityMeeting__c.object
<CustomObject>
    <description>Object to connect an Opportunity to a Meeting.</description>
    <fields>
        <fullName>RT1__MeetingDateTime__c</fullName>
        <label>Meeting Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RT1__MeetingStatus__c</fullName>
        <label>Meeting Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RT1__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>ReadyTalk Meeting History</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RT1__ReadytalkMeeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Meeting Title</label>
        <referenceTo>RT1__ReadyTalkMeeting__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>OpportunityMeetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Meeting</label>
    <nameField>
        <label>Meeting ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>